--- a/Second-Nature/vue/index.html
+++ b/Second-Nature/vue/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./src/assets/SNIconTransparent.png">
     <title>Second Nature</title>
     <script type="module" src="/src/main.js"></script>
+    <link rel="stylesheet" href="/src/style.css">
   </head>
   <body>
     <noscript>
