--- a/Second-Nature/vue/index.html
+++ b/Second-Nature/vue/index.html
@@ -15,5 +15,8 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- Cloudinary File Storage script -->
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
   </body>
 </html>
